# RAG-Knowledge-Assistant

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
backend/: deps.py  main.py  requirements.txt  security.py
backend/routes/: chat.py  documents.py
core/: __init__.py  config.py  indexer.py  loader.py  rag.py
docs/: architecture.md
docs/plans/: 2026-03-23-web-migration-design.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatArea.tsx  ChatInput.tsx  MessageBubble.tsx  SourceChips.tsx  ThinkingIndicator.tsx
frontend/components/sidebar/: DocumentList.tsx  FileDropzone.tsx  SettingsPanel.tsx  Sidebar.tsx
frontend/hooks/: useChat.ts  useDocuments.ts
frontend/lib/: api.ts  types.ts
frontend/tests/: chat.spec.ts  ui.spec.ts
knowledge_base/: catalog-alphapro-2026.txt  catalog-betasupply-2026.txt  catalog-gammadist-2026.txt  client-purchases-q1-2026.txt  employees-2026.csv  nexus-selling-prices-2026.txt  sample_document.txt  supplier-comparison-2026.txt
tests/: __init__.py  qa_playwright.py  test_indexer.py  test_loader.py
